objects/Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2_optional__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address 2 (optional)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_For_Sync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field gives the information whether the relationship is approved to Sync to Transaction API</description>
        <label>Approved_For_Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Total_Payment_PerMonth_Pay__c</fullName>
        <label>Average_Total_Payment_PerMonth_Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_Total_Payment_PerMonth_Receive__c</fullName>
        <label>Average_Total_Payment_PerMonth_Receive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_transaction_Size_Pay__c</fullName>
        <label>Average_transaction_Size_Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Average_transaction_Size_Receive__c</fullName>
        <label>Average_transaction_Size_Receive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Address_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address_2_optional__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Address 2 optional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Billing Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Edit_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Edit Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Relationships Added by Client</relationshipLabel>
        <relationshipName>Relationship_object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Compliance_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Compliance Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Edit_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Edit Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Doing_business_as__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Doing business as</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DollarLimit_Per_Month_Pay__c</fullName>
        <label>DollarLimit_Per_Month_Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollar_Limit_per_Month_Receive__c</fullName>
        <label>Dollar_Limit_per_Month_Receive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Due_Diligence_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Diligence Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <label>EIN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Established_year__c</fullName>
        <label>Established year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Field used to store the Unique id when mapping data back to Salesforce from external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handles_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gives the information whether this Partner handles the security for the MRB client facility</description>
        <label>Handles Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_SSN_DL_Passport__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ID (SSN, DL, Passport)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_MRB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will indicate if the Partner is a Majurana related business.</description>
        <inlineHelpText>Is this a  Majurana related business?</inlineHelpText>
        <label>Is_MRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can Pay/Get Paid by</description>
        <label>Is_Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landlord__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Landlord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Client_Update_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Client Update Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_company_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal company name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ownership_of_Business__c</fullName>
        <label>Ownership of Business</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ownership_percentage_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ownership percentage flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Added as a partner of</relationshipLabel>
        <relationshipName>Relationship_object1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Relationship_description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
                <value>
                    <fullName>LE Owner</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Occupation</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Taxes</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Ohio</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Limit_Pay__c</fullName>
        <label>Transaction_Limit_Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Limit_Receive__c</fullName>
        <label>Transaction_Limit_Receive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Limits_Per_Month_Pay__c</fullName>
        <label>Transaction_Limits_Per_Month_Pay</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Limits_per_month_Receive__c</fullName>
        <label>Transaction_Limits_per_month_Receive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound ,Outbound, Both</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transactions_Per_Month_Pay__c</fullName>
        <label>Transactions_Per_Month_Pay</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transactions_Per_Month_Receive__c</fullName>
        <label>Transactions_Per_Month_Receive</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Update_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <recordTypes>
        <fullName>company</fullName>
        <active>true</active>
        <label>company</label>
    </recordTypes>
    <recordTypes>
        <fullName>individual</fullName>
        <active>true</active>
        <label>individual</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>